reduje la complejidad ciclomatica realizando algunas modificaciones en clase Sistema

--- a/Codigo/.jacocoverage/report.html/dominio/Persona.java.html
+++ b/Codigo/.jacocoverage/report.html/dominio/Persona.java.html
@@ -83,8 +83,8 @@ import javax.swing.ImageIcon;
 
     @Override
     public boolean equals(Object obj) {
-<span class="pc bpc" id="L86" title="1 of 2 branches missed.">        if(obj == null){</span>
-<span class="nc" id="L87">            return false;</span>
+<span class="fc bfc" id="L86" title="All 2 branches covered.">        if(obj == null){</span>
+<span class="fc" id="L87">            return false;</span>
         }
 <span class="pc bpc" id="L89" title="1 of 2 branches missed.">        if(this.getClass() != obj.getClass()){</span>
 <span class="nc" id="L90">            return false;</span>
